--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,11 +7,21 @@ node {
             url: 'https://github.com/MuskanCh/pipeline.git'
         }
         stage('pull'){
-            sh 'sudo docker run hello-world'
+            sh 'docker run hello-world'
         }
         stage('deploy'){
             sh 'microk8s kubectl apply -f deployment.yml'
         }   
+        stage('get_commit_msg') {
+            steps {
+            script {
+            env.GIT_COMMIT_MSG = sh (script: 'git log -1 --pretty=%B ${GIT_COMMIT}', returnStdout: true).trim()
+        }
+        stage('message'){
+            slacksend message: ${env.GIT_COMMIT_MSG}
+        }
+    }
+}
     } 
     catch (e) {
         currentBuild.result = "FAILED"
@@ -22,7 +32,20 @@ node {
     }
 }
 def notifyBuild(String buildStatus = 'STARTED') {
+  buildStatus =  buildStatus ?: 'SUCCESSFUL'
+  def colorName = 'RED'
+  def colorCode = '#FF0000'
   def summary = "${buildStatus}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}] [${env.BUILD_URL}]'"
-  slackSend message: summary
+  if (buildStatus == 'STARTED') {
+    color = 'YELLOW'
+    colorCode = '#FFFF00'
+  } 
+  else if (buildStatus == 'SUCCESSFUL') {
+    color = 'GREEN'
+    colorCode = '#00FF00'
+  } else {
+    color = 'RED'
+    colorCode = '#FF0000'
+  }
+  slackSend (color: colorCode, message: summary)
 }
-
